cth/swagger (#31)
* change start_date_time to date type

* update swagger configuration
