# server/docs/swagger.json
@@ -6,10 +6,9 @@
         "contact": {},
         "version": "1.0.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "basePath": "/api",
     "paths": {
-        "/countries": {
+        "/v1/countries": {
             "get": {
                 "description": "get a list of all available countires",
                 "consumes": [
@@ -41,7 +40,27 @@
                 }
             }
         },
-        "/trips": {
+        "/v1/healthcheck": {
+            "get": {
+                "description": "check server status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "default"
+                ],
+                "summary": "check server status",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponseDTO"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/trips": {
             "get": {
                 "security": [
                     {
@@ -158,7 +177,7 @@
                 }
             }
         },
-        "/trips/{id}": {
+        "/v1/trips/{id}": {
             "put": {
                 "security": [
                     {
@@ -282,7 +301,7 @@
                 }
             }
         },
-        "/user": {
+        "/v1/users": {
             "post": {
                 "description": "Register a new user",
                 "consumes": [
@@ -328,7 +347,7 @@
                 }
             }
         },
-        "/user/login": {
+        "/v1/users/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -448,7 +467,7 @@
                 },
                 "endDateTime": {
                     "type": "string",
-                    "example": "2023-08-29"
+                    "example": "2024-01-02T15:04:05Z"
                 },
                 "name": {
                     "type": "string",
@@ -456,7 +475,7 @@
                 },
                 "startDateTime": {
                     "type": "string",
-                    "example": "2023-05-29"
+                    "example": "2024-01-02T15:04:05Z"
                 }
             }
         },
@@ -477,7 +496,7 @@
                 },
                 "endDateTime": {
                     "type": "string",
-                    "example": "2023-08-29"
+                    "example": "2024-01-02T15:04:05Z"
                 },
                 "id": {
                     "type": "integer",
@@ -489,7 +508,7 @@
                 },
                 "startDateTime": {
                     "type": "string",
-                    "example": "2023-05-29"
+                    "example": "2024-01-02T15:04:05Z"
                 }
             }
         },
