# server/internal/pkg/handlers/handler.go
@@ -27,10 +27,10 @@ func New(TripUseCase TripUseCase, CountryUseCase CountryUsecase, UserUseCase Use
 func (h *Handler) InitRoutes() http.Handler {
 	engine := gin.Default()
 	engine.Use(middlewares.LoggingMiddleware())
-	engine.GET("/healthcheck", healthCheck())
 	engine.GET("/", healthCheck())
 
 	apiGroup := engine.Group("api/v1")
+	apiGroup.GET("/healthcheck", healthCheck())
 	apiGroup.GET("/countries", h.GetCountries)
 	apiGroup.POST("/users", h.Register)
 	apiGroup.POST("/users/login", h.Login)
@@ -43,6 +43,14 @@ func (h *Handler) InitRoutes() http.Handler {
 	return engine
 }
 
+// healthcheck
+//
+// @Summary			check server status
+// @Description		check server status
+// @Tags			default
+// @Produce			json
+// @Success			200	{object}	dto.BaseResponseDTO
+// @Router			/v1/healthcheck [get]
 func healthCheck() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		ctx.JSON(http.StatusOK, gin.H{
